--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 skipsdist = True
 usedevelop = True
 envlist =
-    py{34,35,36}-dj{111,20}-wagtail{22,23},
-    py37-dj20-wagtail{22,23},
-    py{35,36,37}-dj21-wagtail23,
+    py{38,39,310}-dj{32,41}-wt{41,42,50},
+    py{311}-dj{41,42}-wt{50},
+    isort,
     flake8,
     docs,
 
@@ -14,27 +14,41 @@ max-line-length = 120
 
 [testenv]
 install_command = pip install -e ".[testing]" -U {opts} {packages}
-commands = ./runtests.py --fast
+commands = python runtests.py --fast
 basepython =
-    py34: python3.4
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
+    py38: python3.8
+    py39: python3.9
+    py310: python3.10
+	py311: python3.11
 deps =
-    dj111: Django>=1.11,<2.0
-    dj20: Django>=2.0,<2.1
-    dj21: Django>=2.1,<2.2
-    wagtail22: wagtail>=2.2,<2.3
-    wagtail23: wagtail>=2.3,<2.4
+    dj32: Django>=3.2,<3.3
+    dj41: Django>=4.1,<4.2
+    dj42: Django>=4.2,<5.0
+	wt41: wagtail>=4.1,<4.2
+    wt42: wagtail>=4.2,<5.0
+    wt50: wagtail>=5.0,<5.1
+
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+	3.11: py311
+
+[testenv:isort]
+usedevelop = True
+deps = isort
+basepython = python3.8
+commands = isort --recursive --diff --check-only wagtailmodelchooser tests
 
 [testenv:flake8]
-basepython = python3.5
-commands = ./runtests.py --lintonly
+basepython = python3.8
+commands = python runtests.py --lintonly
 deps =
     pytest>=2.9,<2.10
     flake8==2.4.0
 
 [testenv:docs]
-basepython = python3.5
+basepython = python3.8
 commands = mkdocs build
 deps = mkdocs>=0.11.1
